@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-1-25
+DATE: 06/13/2011
+STAFF: lec
+CHANGES:
+1) TR10731/GXD_SpecTheiler.sql
+
 TAG: qcreports_db-4-4-1-24
 DATE: 05/18/2011
 STAFF: lec
